incorporated Jonathan's introduction and updated .bib file

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -60,7 +60,7 @@
 
 \begin{frontmatter}
 
-\title{Mechanical Behavior of Steel and Aluminum Foams at High Temperatures}
+\title{Mechanical Behavior of Steel and Aluminum Foams at High Temperatures. Local buckling based approach toward understanding of the material system behavior}
 
 
 %% include affiliations in footnotes:
@@ -92,16 +92,19 @@ Metallic foam \sep Plastic buckling \sep Thermal analysis \sep Hollow-sphere ste
 
 \section{Introduction}
 
-Cellular materials are commonly found in nature (for example, bird bones and cork) because they are lightweight, and tissue can grow into their open cells enhancing biological interfaces. Metallic foam is an intentionally porous metal substratum largely made up of voids varying in size from nanometers to millimeters. Because the physical parameters of a metal foam, such as its porosity, can be readily controlled during manufacture, the metallic foam’s Young’s modulus and yield stress can be tuned to satisfy the specific needs, especially in the context of multi-functional and multi-physical engineering applications.
+Cellular materials are commonly found in nature (for example, bird bones, cork) because they are lightweight, and tissue can grow into their open cells enhancing biological interfaces. Metallic foam is an intentionally porous metal substratum largely made up of voids varying in size from nanometers to millimeters. Because the physical parameters of a metal foam, such as its porosity, can be readily controlled during manufacture, the metallic foam's Young's modulus and yield stress can be tuned to satisfy an engineering project's specific needs, especially in the context of multi-functional and multi-physical engineering applications.
 
-Metallic foams have inherent fire retardancy, low thermal conductivity (relative to traditional steel structural components), and acoustic shielding. Open cell foams, albeit more expensive than traditional materials, also provide air, vapor, and fluid transport capabilities. Open cell foams act efficiently as heat exchangers due to the turbulent well-mixing flow that occurs within the foam’s irregular micro-structural cavities, combined with the large surface area of their pores and the high thermal conductivity of their base metals. The influences of various micro-structural properties of metal foams, such as their porosity, pore and fiber diameters, tortuosity, pore density, and relative density on the heat exchanger performance were discussed in \cite{MahjoobKambiz2008}. Vadwala et al. \cite{Vadwala2011} showed that a new composite material combining copper foam with wax was efficient in increasing the thermal conductivity of thermal energy storage systems. Cellular metals are also used as catalyst support in fuel cells. Their large surface area and mixing potential increases the intensity of the interaction between the catalyst and the fluid medium. Yuan et al. \cite{Yuanetal2012} provides a review of the fabrication, characterization, and application of porous metal materials for application to fuel cells.
+Metallic foams have inherent fire retardancy, low thermal conductivity (relative to traditional metal structural components), and acoustic shielding. Open cell foams, albeit more expensive than conventional materials, also provide air, vapor, and fluid transport capabilities. Open cell foams act efficiently as heat exchangers due to the turbulent well-mixing flow that occurs within the foam's irregular micro-structural cavities, combined with the large surface area of their pores and high thermal conductivity of their base metals. The influences of various micro-structural properties of metal foams, such as their porosity, pore and fiber diameters, tortuosity, pore density, and relative density on the heat exchanger performance were discussed in \cite{MahjoobKambiz2008}. \cite{Vadwala2011} showed that a new composite material combining copper foam with wax was efficient in increasing the thermal conductivity of thermal energy storage systems. Cellular metals are also used as catalyst support in fuel cells. Their large surface area and mixing potential increases the intensity of the interaction between the catalyst and the fluid medium. \cite{Yuanetal2012} provides a review of the fabrication, characterization, and application of porous metal materials to fuel cells.
 
- While existing applications for metallic foams reside largely in the mechanical, aerospace, and automotive domains \cite{Smithetal2012}, decreasing manufacturing costs and more widespread adoption of full-scale production techniques has ushered in the potential for using metallic foams in civil infrastructure applications. Metallic foams exhibit excellent stiffness-to-weight ratios, in comparison to traditional building materials, under a variety of loading conditions. For example, Banhart and Seeliger \cite{BanhartSeeliger2008} showed that foam panels have higher bending stiffness than solid steel sheets of the same weight. Metallic foams are also renowned for their compressibility because they can reliably sustain 90 \% engineering strain prior to failure \cite{GibsonAshsby1999}, lending them extraordinary energy dissipation capacity \cite{Ashsby2000}. Energy dissipation via large compressive deformations at low-amplitude constant stress levels has been explored by the automotive industry as a potential crash protection technology \cite{Lefebvreetal2008}.
+While existing applications for metallic foams reside largely in the mechanical, aerospace, and automotive domains \cite{Smithetal2012}, decreasing manufacturing costs and more widespread adoption of full-scale production techniques has ushered in the potential for using metallic foams in civil infrastructure applications. Metallic foams exhibit excellent stiffness-to-weight ratios, in comparison to conventional building materials, under a variety of loading conditions. For example, \cite{BanhartSeeliger2008} showed that foam panels have higher bending stiffness than solid steel sheets of the same weight. Metallic foams are also renowned for their compressibility because they can reliably sustain 90~\% engineering strain prior to failure \cite{GibsonAshsby1999}, lending them extraordinary energy dissipation capacity \cite{Ashsby2000}. Energy dissipation via large compressive deformations at low-amplitude stress levels has been explored by the automotive industry as a potential crash protection technology \cite{Lefebvreetal2008}.
 
-The ambient-temperature mechanical properties of metallic foams – particularly steel and aluminum foams – are characteristically different from those of their solid base metals. Steel foam is highly-compressible after yielding, unlike solid steel \cite{DeshpandeFleck2000}, which exhibits only shear deformations and is incompressible in the plastic regime. Also, foams often fracture under tensile strains that are noticeably lower than their crushing and compaction strains \cite{Reyesetal2003} thus warranting tailored respective failure criterions. Szyniszewski et al. \cite{Szyniszewskietal2014} tested steel foam to measure its compressive yield stress, densification strain, compressive plastic Poisson’s ratio, compressive unloading modulus, as well as axial and shear mechanical properties at ambient temperature. \cite{Szyniszewskietal2014} noted the importance of correctly assessing Poisson’s ratio due to its link to foam compressibility as shown by Deshpande and Fleck \cite{DeshpandeFleck2000}.
+The ambient-temperature mechanical properties of metallic foams, specifically steel and aluminum foams, are characteristically different from those of their solid base metals. Steel foam is highly-compressible after yielding, unlike solid steel \cite{DeshpandeFleck2000}, which exhibits only shear deformations and is incompressible in the plastic regime. Also, foams tend to fracture under tensile strains that are noticeably lower than their crushing and compaction strains \cite{Reyesetal2003} thus warranting tailored respective failure criterions. \cite{Szyniszewskietal2014} tested fifty hollow sphere (HS) steel foam bars to measure their compressive yield stress, densification strain, compressive plastic Poisson's ratio, compressive unloading modulus, as well as axial and shear mechanical properties at ambient temperature. \cite{Szyniszewskietal2014} noted the importance of correctly assessing Poisson's ratio due to its link to foam compressibility as shown by \cite{DeshpandeFleck2000}.
 
-Elevated temperatures have a significant influence on the compressive behavior of metallic foams. Aly \cite{Aly2007} tested closed cell aluminum foams under compressive loads at temperatures ranging from $25\,^{\circ}\mathrm{C}$ to $620\,^{\circ}\mathrm{C}$, and concluded that the compressive strength decreases both as the foam's density decreases and when temperature increases. Kovavcik et al. \cite{Kovacicetal2016} studied the high-temperature ($20\,^{\circ}\mathrm{C}$ to $500\,^{\circ}\mathrm{C}$) compressive behavior of powder metallurgy aluminum foams. They observed that increased temperatures resulted in decreased compressive strength, decreased energy absorption capacity, and increased densification strain (plateau length) at constant density. Kovavci et al. \cite{Kovacicetal2016} also reported that exposure time (of the elevated temperatures) did not influence the compression behavior of foams. Liu et al. \cite{Liuetal2016} investigated Al-Si-SiC composite foams under compression at elevated temperatures, evaluating the influence of temperature on energy absorption and type of fracture. Liu \cite{Liuetal2016} reported a decrease in compressive strength with increasing temperature, as well as a decrease in the absorbed energy where ductile-type fracture mode occurred. Taherisharg et al. \cite{Taherishargh2018} analyzed expanded perlite-aluminum syntactic foam at elevated temperatures and compared the results with those of the matrix materials, tested under the same conditions. Their results indicated that the high-temperature mechanical properties of the foams are controlled both by softening of the matrix materials and the improved ductility of the foam. Bekoz and Oktay \cite{BekozOktay2014} tested the mechanical properties of powder metallurgy steel foams at ambient and elevated temperatures, and reported an increase in compressive yield strength and stiffness for temperatures at or below $400\,^{\circ}\mathrm{C}$, and a decrease in compressive yield strength and stiffness above that temperature. They \cite{BekozOktay2014} concluded that the aging effect (i.e., dynamic age-hardening) was responsible for the increase in mechanical properties up to $400\,^{\circ}\mathrm{C}$. As a continuation of the work presented in Szyniszewski et al. \cite{Szyniszewskietal2014}, this study examines the thermo-mechanical behavior of hollow-sphere (HS) steel foam samples removed from the same rectangular prism. Specifically, this paper characterizes and compares the mechanical properties of HS steel and powder-metallurgy (PM) aluminum foam specimens at elevated temperatures. Both the steel and aluminum foams are exposed to a wide range of elevated temperatures, up to $700\,^{\circ}\mathrm{C}$
-and $500\,^{\circ}\mathrm{C}$, respectively, for durations of 15 min and 30 min.
+Research has shown that temperature influences mechanical properties of engineering materials \cite{richeton_influence_2006}, and can reduce capacity of engineering systems such as sandwich panels \cite{zhang_mode_2020}. Thermo-mechanical behavior is also important for manufacturing approaches employing electrical current or the electromagnetic forming (EMF) \cite{thomas_theory_2007}. The elevated temperatures also have a significant influence on the compressive behavior of metallic foams. \cite{Aly2007} conducted a series of compressive tests on ALPORAS, a commercially-available closed cell aluminum foam manufactured by the Shinko-wire Company, at temperatures ranging from $25~^{\circ}\mathrm{C}$ to $620~^{\circ}\mathrm{C}$. They found that the foam's compressive strength decreased both with decreased density and increased temperature. \cite{BekozOktay2014} tested the mechanical properties of powder metallurgy steel foams at ambient and elevated temperatures, and reported an increase in compressive yield strength and stiffness for temperatures at or below $400~^{\circ}\mathrm{C}$, and a decrease in compressive yield strength and stiffness above that temperature. \cite{BekozOktay2014} concluded that the ageing effect (i.e., dynamic age-hardening) was responsible for the increase in mechanical properties up to $400~^{\circ}\mathrm{C}$. \cite{Kovacicetal2016} examined the high-temperature compressive behavior of powder metallurgy aluminum foams at temperatures ranging from $20~^{\circ}\mathrm{C}$ to $500~^{\circ}\mathrm{C}$. They observed that increased temperatures resulted in decreased compressive strength and decreased energy absorption capacity, but increased densification strain (plateau length) at constant density. \cite{Kovacicetal2016} also reported that exposure time i.e., the amount of time which the specimen was held at a constant elevated temperature before compressing it, did not influence the foam's compressive behavior. As part of a broader study on the behavior of ex-situ aluminum-alloy filled tubes under elevated temperatures (see \cite{Movahedi:2017}), \cite{Linul:2017} performed one quasi-static compressive test of a closed-cell aluminum foam specimen at temperatures of $25~^{\circ}\mathrm{C}$, $150~^{\circ}\mathrm{C}$, $300~^{\circ}\mathrm{C}$, and $450~^{\circ}\mathrm{C}$. Their results found only minor degradation in yield stress at or below 300$^{\circ}\mathrm{C}$, after which, because it passing through its transition temperature, the degradation was more pronounced. \cite{Linul:2017} notes that, as the aluminum cell-walls began softening at higher temperatures, the morphology of the compressive stress-strain behavior becomes smoother, such that the aluminum foam behaves in a similar manner as a ductile metal.
+
+Many additional studies have investigated the compressive behavior of composite or alloyed metallic foams at elevated temperatures. After testing the compressive behavior of cenosphere-filled aluminum syntactic foams at elevated temperatures of 100~$^{\circ}\mathrm{C}$ and 200~$^{\circ}\mathrm{C}$, and strain rates ranging from 10$^{-3}$/s to 1/s, \cite{Mondal:2012} found that plateau stress decreased with temperature irrespective of strain-rate. \cite{Bekoz:2014} tested Distaloy (Cu-Ni-Mo) and Astaloy (Mo) foams having different degrees of porosity at elevated temperatures of 200~$^{\circ}\mathrm{C}$, 400~$^{\circ}\mathrm{C}$, and 600~$^{\circ}\mathrm{C}$. They found that the length of the yield plateau (in units of compressive strain) was appreciably affected by porosity but not temperature. They also observed that compressive yield strength increased up to a temperature of 400~$^{\circ}\mathrm{C}$, after which it sharply decreased at 600~$^{\circ}\mathrm{C}$. \cite{Liuetal2016} investigated the compressive behavior of composite Al-Si-SiC foams at elevated temperatures, evaluating the influence of temperature on energy absorption and type of fracture. They reported a decrease in compressive strength with increasing temperature, as well as a decrease in the absorbed energy when a ductile-type fracture mode occurred. \cite{Taherishargh2018} tested expanded perlite-aluminum syntactic foam cylinders in compression at elevated temperatures,  comparing the foam's resulting temperature-degraded mechanical properties against those of the matrix materials, tested under the same conditions. Their results showed that the high-temperature behavior of the foams was controlled both by temperature-dependent softening of the matrix materials and a transition of the deformation behavior of the foam from brittle at low temperatures to ductile at high temperatures. \cite{Linul:2019} investigated the effect of temperature on the microstructure, failure mechanism, and compressive mechanical properties of commercially-available zinc-aluminum alloy syntactic foams with expanded perlite or expanded glass filler particles at four elevated temperatures of 100~$^{\circ}\mathrm{C}$, 200~$^{\circ}\mathrm{C}$, 300~$^{\circ}\mathrm{C}$, and 350~$^{\circ}\mathrm{C}$. The results showed that while the foam with expanded perlite was stronger than the foam with expanded glass across all elevated temperatures, the relative reduction of plateau stress of the two foams was similar.
+
+As a continuation of the work presented in \cite{Szyniszewskietal2014}, this study examines the thermo-mechanical behavior of hollow-sphere (HS) steel foam samples removed from the same rectangular prism. Specifically, this paper characterizes and compares the mechanical properties of HS steel and powder-metallurgy (PM) aluminum foam specimens both exposed to a wide range of elevated temperatures, up to $700~^{\circ}\mathrm{C}$ and $500~^{\circ}\mathrm{C}$, respectively, for durations of 15 min and 30 min. Consistent with ISO Standard 13314:2011, the yield strength and plateau stress are calculated for each specimen. To permit additional characteristics of their compressive stress-strain responses to be calculated, for example the strain at which densification begins, a nine-parameter phenomenological equation fitted to the compressive stress-strain response of each specimen. Finally, to examine the plasticity that localized at sphere interfaces due to contact forces, high-fidelity computational models of hollow-sphere foams were also conducted using LS-DYNA.
 
 \section{Experimental approach}
 
@@ -764,7 +767,8 @@ The compressive behavior of hollow sphere (HS) steel foam and powder metallurgy 
 
 The experimental results showed that the HS steel foam retained more than 89 \% of its compressive strength, when measured by the plateau stress, up to $400\,^{\circ}\mathrm{C}$. The onset of significant degradation in strength was not until temperatures beyond $400\,^{\circ}\mathrm{C}$. The HS steel foam retained about 69 \% of its strength and energy absorption capacity at $550\,^{\circ}\mathrm{C}$. At $700\,^{\circ}\mathrm{C}$, much of the structural integrity of the HS steel foam was largely diminished, retaining only 24 \% of its compressive strength and energy absorption capacity. Contrarily, the PM aluminum foam began to lose strength and energy absorption capacity immediately with increasing elevated temperatures. The PM aluminum foam retained only about 45 \% of its strength and energy absorption capacity at $150\,^{\circ}\mathrm{C}$, and had virtually no strength (only 3.5 \%) remaining at $500\,^{\circ}\mathrm{C}$.
 
-High-resolution computational analysis of HS steel foam was also performed. The simulations indicated that the majority of the available metallic foams are controlled by the plastic buckling at local level, which is a function of the material yield stress. An observation that was further supported by analytical consideration of buckling of a spherical shell. Thus, the local plasticity and plastic stress are critical for the thermal deterioration of metallic foams’ mechanical capacities. However, based on the buckling stability considerations, it might be possible to manufacture ultra-thin-walled foams, which should exhibit highly elastic, reversible deformations. Their thermal behavior is expected to follow thermal deterioration of Young's modulus of the base material.
+High-resolution computational analysis of HS steel foam was also performed. These models showed that under increased deformation plasticity spreads toward the equators of the spheres, gradually increasing diameter of the plastic hinge hoop moving outwards from the initial contact area until buckling of the sphere-walls occurred. This result lends validity to the idea that thermal degradation of the global mechanical properties of HS foam is primarily controlled by the influence of elevated temperatures on the base metal's yield stress. An observation that was further supported by analytical consideration of buckling of a spherical shell. Thus, the local plasticity and plastic stress are critical for the thermal deterioration of metallic foams’ mechanical capacities. However, based on the buckling stability considerations, it might be possible to manufacture ultra-thin-walled foams, which should exhibit highly elastic, reversible deformations. Their thermal behavior is expected to follow thermal deterioration of Young's modulus of the base material.
+
 
 As anticipated from the simulations, the retained plateau stress for both the HS steel and PM aluminum foams generally followed the elevated-temperature degradation of the yield stress of their respective base metals. The trends for solid steel and aluminum are available from fire safety standards such as Eurocode EN 1993-1-2:2005 and EN 1999-1-2:2007 for steel and aluminum, respectively.
 
@@ -774,7 +778,7 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 \begin{table}[htbp]
 	\begin{tabular}{ll}
-		\textbf{Acronyms} \\
+		\textbf{Acronyms}
 		HS    & Hollow Sphere \\
 		PM    & Powder Metallurgy \\
 		ISO   & International Organization for Standardization \\
@@ -859,7 +863,7 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 \printnomenclature[1.5cm]
 
-\section*{Acknowledgments}
+\section*{Acknowledgements}
 
 The authors would like to express heartfelt gratitude to our academic colleagues for their feedback and fruitful discussions. We are grateful to Fraunhofer IWU in Chemnitz and Fraunhofer IFAM in Dresden for the ongoing collaboration, and for their help with supplying the metallic foam rectangular prisms for mechanical testing.
 
@@ -870,7 +874,7 @@ This study was funded by the Research Framework of the European Commission under
 
 The raw data is available upon request and can be uploaded to Elsevier platform.
 
-\bibliography{mybibfile}
+\bibliography{FirepaperBibfile}
 
 \section*{Appendix}
 
