incorporated Jonathan's introduction and expanded bibliography

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -78,8 +78,7 @@
 
 
 \begin{abstract}
-The objective of this study is to quantify and understand the thermo-mechanical behavior of hollow sphere (HS) steel and powder metallurgy (PM) aluminum foams over a broad range of elevated temperatures. The mechanical properties of both the HS steel and PM aluminum foam are measured under compressive loading at ambient ($24\,^{\circ}\mathrm{C}$) and temperatures of $100\,^{\circ}\mathrm{C}$, $150\,^{\circ}\mathrm{C}$, $200\,^{\circ}\mathrm{C}$, $300\,^{\circ}\mathrm{C}$, $400\,^{\circ}\mathrm{C}$, $550\,^{\circ}\mathrm{C}$ and $700\,^{\circ}\mathrm{C}$, and results for the two foams are compared in terms of their rates of degradation in mechanical properties. The experimental work is underpinned by a computational micro-model, consisting of an assembly of hollow spheres, to link the cell geometry and base metal properties with the global mechanical performance. The computational model shows that plastic buckling of cells with progressive plasticity of the contact area is the key local failure mechanism. As expected due to the plastic buckling of the unit cells, thermal degradations of the tested metallic foams generally follow the same trends as does the yield stress of their bulk metals. The HS steel foam exhibits only minor elevated-temperature-induced degradation in its mechanical properties at or below $400\,^{\circ}\mathrm{C}$, while still maintaining 69 \% of its capacity at $550\,^{\circ}\mathrm{C}$. Comparatively, the PM aluminum foam begins degrading at an elevated temperature of only $150\,^{\circ}\mathrm{C}$. Interestingly, the HS steel foam oxidized between $300\,^{\circ}\mathrm{C}$ and $400\,^{\circ}\mathrm{C}$, resulting in increases in the quasi-elastic modulus at elevated temperatures. Future work could explore how to design and take advantage of oxidation reactions at the surfaces of the cells because they could increase mechanical properties of metallic foams at high temperatures. Our computational study also revealed a possibility for a new range of ultra-thin-walled cellular structures, which are predicted to fall within the elastic buckling regime at the local level. Thus, their deformations will be reversible even under high strains and their thermal behavior controlled by the thermal deterioration of elastic constants, and not
-plasticity parameters such as yield stress. \\
+The objective of this study is to quantify and understand the thermo-mechanical behavior of hollow sphere (HS) steel and powder metallurgy (PM) aluminum foams over a broad range of elevated temperatures. The mechanical properties of both the HS steel and PM aluminum foam are measured under compressive loading at ambient ($24\,^{\circ}\mathrm{C}$) and temperatures of $100\,^{\circ}\mathrm{C}$, $150\,^{\circ}\mathrm{C}$, $200\,^{\circ}\mathrm{C}$, $300\,^{\circ}\mathrm{C}$, $400\,^{\circ}\mathrm{C}$, $550\,^{\circ}\mathrm{C}$ and $700\,^{\circ}\mathrm{C}$, and results for the two foams are compared in terms of their rates of degradation in mechanical properties. The experimental work is underpinned by a computational micro-model, consisting of an assembly of hollow spheres, to link the cell geometry and base metal properties with the global mechanical performance. The computational model shows that plastic buckling of cells with progressive plasticity of the contact area is the key local failure mechanism. As expected due to the plastic buckling of the unit cells, thermal degradations of the tested metallic foams generally follow the same trends as does the yield stress of their bulk metals. The HS steel foam exhibits only minor elevated-temperature-induced degradation in its mechanical properties at or below $400\,^{\circ}\mathrm{C}$, while still maintaining 69 \% of its capacity at $550\,^{\circ}\mathrm{C}$. Comparatively, the PM aluminum foam begins degrading at an elevated temperature of only $150\,^{\circ}\mathrm{C}$. Interestingly, the HS steel foam oxidized between $300\,^{\circ}\mathrm{C}$ and $400\,^{\circ}\mathrm{C}$, resulting in increases in the quasi-elastic modulus at elevated temperatures. Future work could explore how to design and take advantage of oxidation reactions at the surfaces of the cells because they could increase mechanical properties of metallic foams at high temperatures. Our computational study also revealed a possibility for a new range of ultra-thin-walled cellular structures, which are predicted to fall within the elastic buckling regime at the local level. Thus, their deformations will be reversible even under high strains and their thermal behavior controlled by the thermal deterioration of elastic constants, and not plasticity parameters such as yield stress.
 \end{abstract}
 
 \begin{keyword}
