Citations and tightenting of the article
- revised introduction from Jonathan was incorporated,
- citations were added to cover recent articles in IJMS, expanded literature review and referneces to Olaf Andersen CT-scans, and Brooks Smith micro-simulator work,
- Content was tightented, especially the abstract and conclusions.

--- a/FirePaperBibfile.bib
+++ b/FirePaperBibfile.bib
@@ -372,6 +372,27 @@ Publisher: Multidisciplinary Digital Publishing Institute},
   title = {MathWorks, MATLAB Global Optimization Toolbox User's Guide, Version 3.4.1 (R2016b), The MathWorks, Inc., Natick, Massachusetts, United States, 2016}
 }
 
+@book{hallquist_ls-dyna_2006,
+	address = {Livermore, California},
+	title = {{LS}-{DYNA} theory manual},
+	publisher = {Lawrence Software Technology Corporation},
+	author = {Hallquist, J.},
+	year = {2006}
+}
+
+@book{cverna_worldwide_2006,
+	title = {Worldwide {Guide} to {Equivalent} {Irons} and {Steels}},
+	isbn = {978-0-87170-822-9},
+	abstract = {This volume covers standard designations from worldwide standards for cast  irons and steels, wrought carbon and alloy steels, stainless steels, high  strength steels, and tool steels. Entries are provided for more than 30,000  alloy designations. Well over 5000 entries have been updated, and more than 3000  are new additions. In particular, the Fifth Edition features expanded coverage  for specifications and designations from Japan, China, India, and South  Korea.},
+	language = {en},
+	publisher = {ASM International},
+	author = {Cverna, Fran},
+	month = jan,
+	year = {2006},
+	note = {Google-Books-ID: SpcF9IrYKRoC},
+	keywords = {Science / Earth Sciences / Mineralogy},
+	file = {Cverna - 2006 - Worldwide Guide to Equivalent Irons and Steels.pdf:C\:\\Users\\ss0052\\Zotero\\storage\\5C6NNSBJ\\Cverna - 2006 - Worldwide Guide to Equivalent Irons and Steels.pdf:application/pdf}
+}
 
 @book{EC9-1-2,
   title = {European Comittee for Standardization. Eurocode 9: Design of Aluminum Structures, Part 1-2: Structural Fire Design – EN 1999-1-2:2007}
