Fixed bug with C formatting

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -582,7 +582,7 @@ The quasi-elastic modulus is the initial slope of the elastic phase of the compr
 	\label{fig:Stress_strain_elast_fit}
 \end{figure}
 
-Figure \ref{fig:Quasi-elast-modulus} show the resulting retained quasi-elastic modulus as a function of temperature. While values for the retained quasi-elastic modulus of the HS steel foam were widely scattered, the quasi-elastic modulus did not degrade noticeably with increasing temperature (i.e., the value of the retained quasi-elastic modulus was greater than 1.0 across the entire temperature range). The largest increases in retained quasi-elastic modulus were at 200~$^{\circ}\mathrm{C}$ and 300\~$^{\circ}\mathrm{C}$. Conversely, quasi-elastic modulus of Aluminum foam deteriorated rapidly with the increase of the ambient temperature.
+Figure \ref{fig:Quasi-elast-modulus} show the resulting retained quasi-elastic modulus as a function of temperature. While values for the retained quasi-elastic modulus of the HS steel foam were widely scattered, the quasi-elastic modulus did not degrade noticeably with increasing temperature (i.e., the value of the retained quasi-elastic modulus was greater than 1.0 across the entire temperature range). The largest increases in retained quasi-elastic modulus were at $200^{\circ}\mathrm{C}$ and $300^{\circ}\mathrm{C}$. Conversely, quasi-elastic modulus of Aluminum foam deteriorated rapidly with the increase of the ambient temperature.
 
 
 \begin{figure}
