Updated Fig. 20 pointer in .tex file

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -664,7 +664,7 @@ While ISO Standard 13314:2011 does specify a methodology for calculating the ene
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.60\linewidth]
-		{Tex-Figures/Fig20-energyAbsorptionEfficiency.png}
+		{Tex-Figures/Fig20-energyAbsorptionEfficiency.pdf}
 		\vspace{-0.2cm}
 		\caption{Schematic representation of methodology for calculating energy absorption efficiency.}
 		\label{EnAbsEffExpl}
