Updated Cover Letter

--- a/coverLetter/coverLetter.tex
+++ b/coverLetter/coverLetter.tex
@@ -20,15 +20,17 @@
 		\JournalName
                }
 
-\opening{Dear Prof Wiercigroch}
+\opening{Dear Editorial Team}
 
-Attached is a revised submission with figures adhering to the journal style, expanded figure captions and graphical abstract. 
+Attached is a revised submission the article titled “Mechanical Behavior of Steel and Aluminum Foams at High Temperatures” co-authored with graduate student Miguel Tavares, Dr Jonathan Weigand, Prof. Luiz Vieira Jr, and Prof. Saulo Almeida.
 
-We believe that the editorial board of {\em \JournalName} may find interest in the attached submission titled “Mechanical Behavior of Steel and Aluminum Foams at High Temperatures” co-authored with graduate student Miguel Tavares, Dr Jonathan Weigand, Prof. Luiz Vieira Jr, and Prof. Saulo Almeida. In this paper, we link the micro-mechanics of hollow sphere and powder metallurgy foams with their performance at elevated temperatures, for steel foams up to 700 C and for aluminium foams reaching 500 C. Our study combines phenomenological testing of material samples with micro-scale simulations and analytical study of unit cell buckling. Our computational study revealed a possibility for a new range of ultra-thin-walled cellular structures, which are predicted to fall within the elastic buckling regime at the local level. Thus, their deformations will be reversible even under high strains and their thermal behaviour controlled by the thermal deterioration of elastic constants, and not plasticity parameters such as yield stress. 
+We are grateful for helpful comments to the three reviewers. We have taken the feedback into account and improved figures and clarity of the article. The abstract and conclusions were shortened and the quality of the figures as well as depth and breadth of the citations expanded.
+
+Generally speaking, our submission links the micro-mechanics of hollow sphere and powder metallurgy foams with their performance at elevated temperatures, for steel foams up to 700 C and for aluminum foams reaching 500 C. Our study combines micro-scale simulations and analytical study of unit cell buckling with experimental testing and validation. Our computational study revealed a possibility for a new range of ultra-thin-walled cellular structures, which are predicted to fall within the elastic buckling regime at the local level. Thus, their deformations will be reversible even under high strains and their thermal behavior controlled by the thermal deterioration of elastic constants, and not plasticity parameters such as yield stress. 
 
 Majority of currently produced cellular metals have relatively thick cell walls and consequently fail locally by plastic buckling. Thus, their thermo-mechanical behavior is controlled by the yield stress of the base metal as demonstrated computationally and experientially in the attached article. Our mechanistic insights are accompanied by an analytical formula producing stress-strain curves of steel and aluminum foams at elevated temperatures. Temperature dependent parameters for the tested steel and aluminum foams are tabulated in the appendix.
 
-I appreciate your time in conducting a review of this paper and the opportunity to publish in the journal.
+I appreciate your time in conducting a review of the revised paper and the opportunity to publish in the journal.
 
 Sincerely,
 
