Graphical abstract + Fig15-16 updates

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -846,7 +846,7 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 \printnomenclature[1.5cm]
 
-\section*{Acknowledgements}
+\section*{Acknowledgments}
 
 The authors would like to express heartfelt gratitude to our academic colleagues for their feedback and fruitful discussions. We are grateful to Fraunhofer IWU in Chemnitz and Fraunhofer IFAM in Dresden for the ongoing collaboration, and for their help with supplying the metallic foam rectangular prisms for mechanical testing. We would like to thank Dr Rene Vogel, Dr Thomas Hipke, Dr Olaf Andersen, Dr Peter Quadbeck and Dr Christian Hannemann.
 
