--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -47,6 +47,7 @@
 \usepackage{booktabs}
 \usepackage{multirow} % to merge cells from diferent lines
 \usepackage{rotating}
+\usepackage{hyperref} % for hyper referneces
 \usepackage{placeins} % for \FloatBarrier
 
 \setlength{\doublerulesep}{\arrayrulewidth}
@@ -846,7 +847,7 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 \printnomenclature[1.5cm]
 
-\section*{Acknowledgments}
+\section*{Acknowledgements}
 
 The authors would like to express heartfelt gratitude to our academic colleagues for their feedback and fruitful discussions. We are grateful to Fraunhofer IWU in Chemnitz and Fraunhofer IFAM in Dresden for the ongoing collaboration, and for their help with supplying the metallic foam rectangular prisms for mechanical testing. We would like to thank Dr Rene Vogel, Dr Thomas Hipke, Dr Olaf Andersen, Dr Peter Quadbeck and Dr Christian Hannemann.
 
@@ -857,7 +858,7 @@ This study was funded by the Research Framework of the European Commission under
 
 \section*{Data availability}
 
-The data is available upon request from the corresponding author.
+MATLAB function and script for parametrization of the stress-strain curve are available at \url{https://github.com/StefanSzynisz/RichardsParametrization}. These tools can be used to compute parameters in Richard's equation for any given stress-strain curve. The data from this study is also available upon request from the corresponding author.
 
 \bibliography{FirepaperBibfile}
 
