--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -66,15 +66,14 @@
 
 %% include affiliations in footnotes:
 \author[mymainaddress]{M. Tavares}
-\author[mysecondaryaddress]{J. M. Weigand}
-\author[mymainaddress]{L. C. M. Vieira Jr.}
+\author[]{J. M. Weigand}
+\author[mymainaddress]{Luiz C. M. Vieira, Jr.}
 \author[mymainaddress]{S. J. C. Almeida}
-\author[mythirdaddress]{S. Szyniszewski\corref{mycorrespondingauthor}}
+\author[mythirdaddress]{S.~Szyniszewski\corref{mycorrespondingauthor}}
 \cortext[mycorrespondingauthor]{Corresponding author}
 \ead{s.szyniszewski@gmail.com}
 
 \address[mymainaddress]{Department of Structural Engineering, State University of Campinas, Campinas, Brazil}
-\address[mysecondaryaddress]{National Institute of Standards and Technology (NIST), Gaithersburg, Maryland, USA}
 \address[mythirdaddress]{Department of Engineering, Durham University, Durham, UK}
 
 
@@ -851,7 +850,9 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 The authors would like to express heartfelt gratitude to our academic colleagues for their feedback and fruitful discussions. We are grateful to Fraunhofer IWU in Chemnitz and Fraunhofer IFAM in Dresden for the ongoing collaboration, and for their help with supplying the metallic foam rectangular prisms for mechanical testing. We would like to thank Dr Rene Vogel, Dr Thomas Hipke, Dr Olaf Andersen, Dr Peter Quadbeck and Dr Christian Hannemann.
 
-We also would like to express our gratitude to technicians who assisted us during the mechanical tests, namley Mr Peter Heynes and David Jesson. We are also indebted to LS-DYNA support and developers for their assistance with the implicit, large deforamtion and large-strain micro-model.
+We also would like to express our gratitude to technicians who assisted us during the mechanical tests, namley Mr Peter Heynes and David Jesson. We are also indebted to LS-DYNA support and developers for their assistance with the implicit, large deformation and large-strain micro-model.
+
+Luiz C.M. Vieira Jr. is indebted to the Brazilian National Council for Scientific and Technological Development (CNPq) for the research productivity fellowship grant 304005/2017-7.
 
 This study was funded by the Research Framework of the European Commission under METFOAM Career Integration Grant 631827 with support from program manager Dr. Ing. Antonio Cipollaro. The work was also supported by the impact acceleration grant no EP/P511456/1, provided by the Engineering and Physical Science Council (EPSRC) in the UK. Support of Dr. Sue Angulatta, a local program manager, is genuinely appreciated. Any opinions, findings, and conclusions expressed in this article are those of the author(s) and do not necessarily reflect the views of EPSRC or the European Commission.
 
