- updated Cover letter

--- a/coverLetter/coverLetter.tex
+++ b/coverLetter/coverLetter.tex
@@ -7,7 +7,7 @@
 \documentclass[11pt]{durhamLetter}
 
 \name{Stefan Szyniszewski} % used as signature, if no signature is specified
-\signature{Assistant Professor of Material and Structures}
+\signature{Assistant Professor of Applied Mechanics}
 %\date{November 4th, 2019} % if no date specified, today's date is used 
 \newcommand{\JournalName}{International Journal of Mechanical Sciences}
 
@@ -22,7 +22,7 @@
 
 \opening{Dear Editorial Team}
 
-Attached is a revised submission the article titled “Mechanical Behavior of Steel and Aluminum Foams at High Temperatures” co-authored with graduate student Miguel Tavares, Dr Jonathan Weigand, Prof. Luiz Vieira Jr, and Prof. Saulo Almeida.
+Attached is a revised submission of the article titled “Mechanical Behavior of Steel and Aluminum Foams at High Temperatures” co-authored with graduate student Miguel Tavares, Dr Jonathan Weigand, Prof. Luiz Vieira Jr, and Prof. Saulo Almeida.
 
 We are grateful for helpful comments to the three reviewers. We have taken the feedback into account and improved figures and clarity of the article. The abstract and conclusions were shortened and the quality of the figures as well as depth and breadth of the citations expanded.
 
